Refactored with Sass

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,13 +38,7 @@ h1, h2, h3 {
   padding-bottom: 100px;
 }
 
-.navbar-default .navbar-brand {
-  color: white;
-  &:hover {
-    color: white;
-    opacity: 0.75;
-  }
-}
+.navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
   color: white;
   &:hover {
@@ -52,4 +46,3 @@ h1, h2, h3 {
     opacity: 0.75;
   }
 }
-
