--- a/app/views/devise/registrations/_premium_form.html.erb
+++ b/app/views/devise/registrations/_premium_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'pro_form'}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'premium_form'}) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <%= hidden_field_tag 'plan', params[:plan] %>
