--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <% tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+    <%= javascript_include_tag 'pages', 'data-turbolinks-track': 'reload' %>
+    <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+    <script>
+      $(function() {
+        $('.alert').delay(1000).fadeOut(4000);
+        });
+    </script>
   </head>
 
   <body>
@@ -45,7 +51,7 @@
       </div>
     </nav>
     
-    <div class="container">
+    <div class="container flash-container">
       <% flash.each do |type, msg| %>
           <%= content_tag :div, msg, class: "alert alert-#{type}" %>
       <% end %>
