--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
+      <h1 class="text-center">DevMatch Community</h1>
+      <p class="text-center">Welcome to the DevMatch community. Users must fill out a profile in order to be visibile within the community.</p>
       <ul class="list-unstyled">
         <% @users.each do |user| %>
           <% if user.profile %>
             <li>
               <div class="well row <%= cycle('white-bg', '') %>">
-                <div class="col-sm-4 text center">
+                <div class="col-sm-4 text-center">
                   <% if user.profile.avatar %>
                     <%= link_to user do %>
                       <%= image_tag user.profile.avatar.url, class: 'user-index-avatar' %>
