--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,12 @@
           </div>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
+              <% if current_user.profile.nickname %>
+                <li><%= link_to "#{current_user.profile.nickname}", user_path(id: current_user.id) %></li>
+              <% else %>
+                <li><%= link_to "My Account", edit_user_registration_path %></li>
+              <% end %>
               <li><%= link_to "Community", users_path %></li>
-              <li><%= link_to "My Account", edit_user_registration_path %></li>
             <% end %>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact Us", new_contact_path %></li>
