--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,6 +8,10 @@
         <%= f.text_field :last_name, class: 'form-control' %>
     </div>
     <div class="form-group">
+        <%= f.label :nickname %>
+        <%= f.text_field :nickname, class: 'form-control' %>
+    </div>
+    <div class="form-group">
         <%= f.label :avatar %>
         <%= f.file_field :avatar, class: 'form-control' %>
     </div>
