--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
               <% if current_user.profile.nickname %>
-                <li><%= link_to "#{current_user.profile.nickname}", user_path(id: current_user.id) %></li>
+                <li><%= link_to "#{current_user.profile.nickname}".upcase, user_path(id: current_user.id) %></li>
               <% else %>
                 <li><%= link_to "My Account", edit_user_registration_path %></li>
               <% end %>
